# FFmpeg

./: .gitignore  CMakeLists.txt  build.sh
custom/: CMakeLists.txt
custom/examples/: CMakeLists.txt
custom/examples/decode_video/: decode_video.c
custom/examples/demux_decode/: CMakeLists.txt  demux_decode.c
custom/examples/extract_mvs/: CMakeLists.txt  extract_mvs.c
custom/examples/mux/: CMakeLists.txt  mux.c
custom/examples/remux/: CMakeLists.txt  remux.c
custom/examples/show_metadata/: CMakeLists.txt  show_metadata.c
custom/examples/transcode/: CMakeLists.txt  transcode.c
fftools/: cmdutils.c  cmdutils.h  ffplay.c  opt_common.c  opt_common.h
